kustomize/backend/overlays/authselector-infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vigo-auth-organisation-selector
spec:
  template:
    spec:
      hostAliases:
        - ip: "10.0.0.11"
          hostnames:
            - "namadmcon01"
      volumes:
        - name: secrets
          secret:
            secretName: "namadmcon01"
            items:
              - key: cacerts.jks
                path: cacerts.jks
      containers:
        - name: vigo-auth-organisation-selector
          image: ghcr.io/fintlabs/vigo-auth-organisation-selector:sha-0000000
          volumeMounts:
            - name: secrets
              mountPath: /mnt/secrets
              readOnly: true
